--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -1,7 +1,7 @@
 env:
   - GO111MODULE=on
   - CGO_ENABLED=0
-  - PROJECT_NAME=goimports-reviser
+  - PROJECT_NAME=go-imports-sorter
   - PROJECT_USER=incu6us
 
 before:
@@ -9,8 +9,8 @@ before:
     - go mod download
 
 builds:
-  - id: goimports-reviser-amd64
-    binary: goimports-reviser
+  - id: go-imports-sorter-amd64
+    binary: go-imports-sorter
     goos:
       - linux
     goarch:
@@ -18,8 +18,8 @@ builds:
     ldflags:
       - -s -w -X "main.Tag={{ .Tag }}" -X "main.Commit={{ .FullCommit }}" -X "main.SourceURL={{ .GitURL }}" -X "main.GoVersion={{ .Env.GO_VERSION }}"
 
-  - id: goimports-reviser-darwin-amd64
-    binary: goimports-reviser
+  - id: go-imports-sorter-darwin-amd64
+    binary: go-imports-sorter
     goos:
       - darwin
     goarch:
@@ -27,8 +27,8 @@ builds:
     ldflags:
       - -s -w -X "main.Tag={{ .Tag }}" -X "main.Commit={{ .FullCommit }}" -X "main.SourceURL={{ .GitURL }}" -X "main.GoVersion={{ .Env.GO_VERSION }}"
 
-  - id: goimports-reviser-windows-amd64
-    binary: goimports-reviser
+  - id: go-imports-sorter-windows-amd64
+    binary: go-imports-sorter
     goos:
       - windows
     goarch:
@@ -53,10 +53,10 @@ release:
   prerelease: auto
   github:
     owner: incu6us
-    name: goimports-reviser
+    name: go-imports-sorter
 
 brews:
-  - name: goimports-reviser
+  - name: go-imports-sorter
     tap:
       owner: incu6us
       name: homebrew-tap
@@ -65,15 +65,15 @@ brews:
       name: incu6us
       email: vyacheslavpryimak@gmail.com
     folder: Formula
-    homepage: "https://github.com/incu6us/goimports-reviser"
+    homepage: "https://github.com/incu6us/go-imports-sorter"
     description: "Right imports sorting & code formatting tool"
     test: |
-      system "#{bin}/goimports-reviser -version"
+      system "#{bin}/go-imports-sorter -version"
     install: |
-      bin.install "goimports-reviser"
+      bin.install "go-imports-sorter"
 
 snapcrafts:
-  - id: goimports-reviser
+  - id: go-imports-sorter
     name_template: "{{ .ProjectName }}_{{ .Version }}_{{ .Os }}_{{ .Arch }}"
     replacements:
       amd64: 64-bit
