--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -33,9 +33,12 @@ archives:
   - format: tar.gz
     name_template: '{{ .ProjectName }}_{{ .Version }}_{{ .Os }}_{{ .Arch }}'
     wrap_in_directory: true
-    strip_parent_binary_folder: true
+    strip_binary_directory: true
     format_overrides:
       - goos: windows
         format: zip
+    files:
+      - LICENSE
+      - README.md
 checksum:
   disable: true
